fix z-index problems

--- a/bundle/app.css
+++ b/bundle/app.css
@@ -860,7 +860,7 @@ a {
   -webkit-flex-direction: column;
       -ms-flex-direction: column;
           flex-direction: column;
-  z-index: 10;
+  z-index: 20;
 }
 
 
@@ -1288,6 +1288,7 @@ a {
     background-color: #2D3851;
     width: 20%;
     height: 50px;
+    z-index: 999;
   }
 
   body.js-show-right-sidebar .cart__content{
