--- a/css/app.css
+++ b/css/app.css
@@ -275,7 +275,7 @@ a {
   height: 100%;
   /*background-color: rgb(255,255,1);*/
   flex-direction: column;
-  z-index: 10;
+  z-index: 20;
 }
 
 
@@ -528,6 +528,7 @@ a {
     background-color: #2D3851;
     width: 20%;
     height: 50px;
+    z-index: 999;
   }
 
   body.js-show-right-sidebar .cart__content{
